test/compile_errors/err_unit_elision_unconstrained_generic.w
//! expect-check-fail: wrong argument count

fn id[T](val: T) -> T: val

fn main:
    let x = id()
